--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/waseel-asp/desktopapp.git"
+        "url": "https://github.com/waseel-asp/desktopapp.git"
     },
     "keywords": [],
     "author": "",
