--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "desktopapp",
     "version": "1.0.3",
-    "description": "",
+    "description": "desktopapp",
     "main": "main.js",
     "scripts": {
         "start": "electron .",
@@ -21,7 +21,8 @@
     "homepage": "https://github.com/waseel-asp/desktopapp#readme",
     "devDependencies": {
         "electron": "^11.0.1",
-        "electron-builder": "^22.9.1"
+        "electron-builder": "^22.9.1",
+        "oracledb": "5.0.0"
     },
     "dependencies": {
         "electron-updater": "^4.3.5"
