--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "desktopapp",
     "version": "1.0.3",
     "description": "desktopapp",
-    "main": "main.js",
+    "main": "websocketmain.js",
     "scripts": {
         "start": "electron .",
         "build": "electron-builder build --win --publish never",
@@ -21,10 +21,12 @@
     "homepage": "https://github.com/waseel-asp/desktopapp#readme",
     "devDependencies": {
         "electron": "^11.0.1",
-        "electron-builder": "^22.9.1",
-        "oracledb": "5.0.0"
+        "electron-builder": "^22.9.1"
     },
     "dependencies": {
-        "electron-updater": "^4.3.5"
+        "electron-updater": "^4.3.5",
+        "nodejs-websocket": "^1.7.2",
+        "http-server": "^0.12.3",
+        "oracledb": "5.0.0"
     }
 }
