--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "desktopapp",
-    "version": "1.0.6",
+    "version": "1.0.7",
     "description": "desktopapp",
     "main": "autoupdater.js",
     "scripts": {
@@ -25,8 +25,36 @@
     },
     "dependencies": {
         "electron-updater": "^4.3.5",
-        "nodejs-websocket": "^1.7.2",
         "http-server": "^0.12.3",
+        "nodejs-websocket": "^1.7.2",
         "oracledb": "5.0.0"
+    },
+    "resolutions": {
+        "fs-extra": "9.0.1",
+        "semver": "7.3.2",
+        "debug": "4.3.1",
+        "ms": "2.1.2",
+        "jsonfile": "6.1.0",
+        "universalify": "2.0.0",
+        "sprintf-js": "1.0.3",
+        "mime": "2.4.6",
+        "async": "2.6.3",
+        "@types/node": "14.14.9",
+        "get-stream": "5.2.0",
+        "lowercase-keys": "2.0.0",
+        "escape-string-regexp": "4.0.0",
+        "type-fest": "0.13.1",
+        "chalk": "4.1.0",
+        "hosted-git-info": "3.0.7",
+        "ansi-styles": "4.3.0",
+        "supports-color": "7.2.0",
+        "color-convert": "2.0.1",
+        "color-name": "1.1.4",
+        "has-flag": "4.0.0",
+        "string-width": "4.2.0",
+        "emoji-regex": "8.0.0",
+        "is-fullwidth-code-point": "3.0.0",
+        "strip-ansi": "6.0.0",
+        "ansi-regex": "5.0.0"
     }
 }
