--- a/package.json
+++ b/package.json
@@ -27,7 +27,11 @@
     "dependencies": {
         "electron-updater": "^4.3.5",
         "http-server": "^0.12.3",
-        "nodejs-websocket": "^1.7.2"
+        "mssql": "^6.2.3",
+        "nodejs-websocket": "^1.7.2",
+        "oracledb": "^5.1.0",
+        "sqlite3": "^5.0.0",
+        "tedious": "^9.2.1"
     },
     "resolutions": {
         "fs-extra": "9.0.1",
