--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "waseele_desktop",
     "version": "1.0.13",
     "description": "waseele desktop",
-    "main": "autoupdater.js",
+    "main": "autoupdater/autoupdater.js",
     "scripts": {
         "start": "electron .",
         "build": "electron-builder build --win --publish never",
