Solve login issue.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "start": "electron .",
         "build": "electron-builder build --win --publish never",
-        "deploy": "electron-builder build --win --publish always"
+        "deploy": "electron-builder build --win --icon=images/desktop_app_icon.ico --publish always"
     },
     "repository": {
         "type": "git",
@@ -26,12 +26,12 @@
     "dependencies": {
         "electron-updater": "^4.3.5",
         "http-server": "^0.12.3",
+        "jwt-decode": "^3.1.2",
         "mssql": "^6.2.3",
         "nodejs-websocket": "^1.7.2",
         "oracledb": "^5.1.0",
         "sqlite3": "^5.0.0",
-        "tedious": "^9.2.1",
-        "jwt-decode": "^3.1.2"
+        "tedious": "^9.2.1"
     },
     "resolutions": {
         "fs-extra": "9.0.1",
