--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "start": "electron .",
         "build": "electron-builder build --win --publish never",
-        "deploy": "electron-builder build --win --icon=images/desktop_app_icon.ico --publish always"
+        "deploy": "electron-builder build --win --publish always"
     },
     "repository": {
         "type": "git",
