--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
         "deploy": "electron-builder build --win --publish always"
     },
     "files": [
-        "images/desktop_app_icon.ico"
+        "images/**/*"
     ],
-    "icon": "images/desktop_app_icon.ico",
     "repository": {
         "type": "git",
         "url": "https://github.com/waseel-asp/desktopapp.git"
