--- a/package.json
+++ b/package.json
@@ -8,6 +8,17 @@
         "build": "electron-builder build --win --publish never",
         "deploy": "electron-builder build --win --publish always"
     },
+    "build": {
+        "extraResources": [
+            {
+                "from": "./resources/oracle client 19_9",
+                "to": "oracle client 19_9",
+                "filter": [
+                    "**/*"
+                ]
+            }
+        ]
+    },
     "files": [
         "images/**/*"
     ],
@@ -27,6 +38,7 @@
         "electron-builder": "^22.9.1"
     },
     "dependencies": {
+        "electron-root-path": "^1.0.16",
         "electron-updater": "^4.3.5",
         "http-server": "^0.12.3",
         "jwt-decode": "^3.1.2",
