--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "electron-builder": "^22.9.1"
     },
     "dependencies": {
+        "electron-log": "^4.3.1",
         "electron-root-path": "^1.0.16",
         "electron-updater": "^4.3.5",
         "http-server": "^0.12.3",
